--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
       <div class="header-nav">
         <nav>
           <ul>
-            <li></li>
+            <li>Todas</li>
+            <li>Shopping</li>
+            <li>Notícias</li>
+            <li>imagens</li>
+            <li>VÍdeos</li>
+            <li>Mais</li>
+            <li>Configurações</li>
+            <li>Ferramentas</li>
           </ul>
         </nav>
       </div>
