adição de zona de resultados

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,7 @@
           <div class="google-logo">
             <img src="/assets/img/google.svg" alt="" />
           </div>
-          <div class="search-bar">
+          <div class="search-bar container">
             <input type="text" />
             <div class="img-keyboard">
               <img
@@ -63,12 +63,12 @@
       </div>
       <div class="header-nav">
         <nav>
-          <ul>
+          <ul class="container">
             <li>Todas</li>
-            <li>Shopping</li>
-            <li>Notícias</li>
             <li>imagens</li>
+            <li>Shopping</li>
             <li>VÍdeos</li>
+            <li>Notícias</li>
             <li>Mais</li>
             <li>Configurações</li>
             <li>Ferramentas</li>
@@ -76,5 +76,93 @@
         </nav>
       </div>
     </header>
+
+    <div class="results container">
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado: bla bla bla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+          debitis Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Neque debitis
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado: bla bla bla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Debitis Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Neque debitis lorem ipsum dolor sit amet consectetur, adipisicing
+          elit. Neque
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">TITULO RESULTADO</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Debitis Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Neque debitis lorem ipsum dolor sit amet consectetur, adipisicing
+          elit. Neque
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado EXEMPLO: bla bla bla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+          debitis Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Neque debitis
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado: bSla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Debitis Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Neque debitis lorem ipsum dolor sit amet consectetur, adipisicing
+          elit. Neque
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado: bla bla bla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Necessitatibus ullam at odit quas, neque odio minus cupiditate
+          voluptatum sit non. Nobis, amet! Voluptatem, in magnam porro id a
+          error soluta!
+        </div>
+      </div>
+
+      <div class="result">
+        <div class="result-title">
+          <a href="#">Titulo resultado: SADAD bla bla</a>
+        </div>
+        <div class="result-url">www.result.dominio.com</div>
+        <div class="result-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Exercitationem voluptas accusamus officiis ab similique porro ipsam
+          nemo recusandae maxime quia consequuntur assumenda odit libero, eos
+          autem magni non deserunt amet!
+        </div>
+      </div>
+    </div>
   </body>
 </html>
